--- a/src/app/nav-header/components/nav-header.component.html
+++ b/src/app/nav-header/components/nav-header.component.html
@@ -49,13 +49,12 @@
                 </ul>
             </div> -->
 
-            <a routerLink="/home" routerLinkActive="active">Home</a>
-            <a routerLink="/about" routerLinkActive="active">About us</a>
-            <a routerLink="/team" routerLinkActive="active">Team</a>
-            <a routerLink="/order-online" routerLinkActive="active">Order Online</a>
-            <a routerLink="/contacts" routerLinkActive="active">Contact us</a>
+            <a [routerLink]= "['/home']" >Home</a>
+            <a [routerLink]= "['/about']" >About us</a>
+            <a [routerLink]= "['/team']" >Team</a>
+            <a [routerLink]= "['/order-online']" >Order Online</a>
+            <a [routerLink]= "['/contact']" >Contact us</a>
         </nav>
     </div>
 </header>
 
-<router-outlet></router-outlet>
