ApiGateway service and about content loaded via mocks

--- a/src/app/about/components/about.component.html
+++ b/src/app/about/components/about.component.html
@@ -2,11 +2,8 @@
   <div class="container gBox">
     <img src="assets/img/team.jpg" class="col-md-4 no-padding-left img-responsive" alt="GingerClub" />
     <div class="col-md-8 noPadding">
-      <h4 class="text-center" style="color:#ABCA4E; margin-top: 0;">About - GingerClub</h4>
-      <p>Incorporated in 2012, Ginger Club started its operations in Wathnan Mall, Al Rayyan, under the able leadership of Mr.
-        Shajeer P K. Sheer Passion to bring the original and authentic eastern food to the other parts of the world is the
-        motive behind the concept which was named as "Ginger Club". With our delicious food and cordial hospitality, we continue
-        to set new industry standards.</p>
+      <h4 class="text-center" style="color:#ABCA4E; margin-top: 0;">{{aboutContent.title}}</h4>
+      <p>{{aboutContent.content}}</p>
       <p>Ginger Club is the destination for Asian cuisine offers a unique menu that's as diverse as the countries the dishes
         originate in. Pick from a range of tantalizing soups, and steaming dumplings to begin your dining experience. Continue
         your culinary journey into the Far East with Chinese and Thai to north-east Indian food.</p>
