--- a/src/app/nav-header/components/nav-header.component.html
+++ b/src/app/nav-header/components/nav-header.component.html
@@ -53,7 +53,7 @@
             <a [routerLink]= "['/about']" >About us</a>
             <a [routerLink]= "['/team']" >Team</a>
             <a [routerLink]= "['/order-online']" >Order Online</a>
-            <a [routerLink]= "['/contact']" >Contact us</a>
+            <a [routerLink]= "['/contacts']" >Contact us</a>
         </nav>
     </div>
 </header>
