--- a/src/app/about/components/about.component.html
+++ b/src/app/about/components/about.component.html
@@ -3,16 +3,7 @@
     <img src="assets/img/team.jpg" class="col-md-4 no-padding-left img-responsive" alt="GingerClub" />
     <div class="col-md-8 noPadding">
       <h4 class="text-center" style="color:#ABCA4E; margin-top: 0;">{{aboutContent.title}}</h4>
-      <p>{{aboutContent.content}}</p>
-      <p>Ginger Club is the destination for Asian cuisine offers a unique menu that's as diverse as the countries the dishes
-        originate in. Pick from a range of tantalizing soups, and steaming dumplings to begin your dining experience. Continue
-        your culinary journey into the Far East with Chinese and Thai to north-east Indian food.</p>
-      <p>The company's expansion map has an aggressive strategic roll out plan, which aims to initiate many more Restaurants
-        in Qatar. By offering a wide range of options for dining-be it a value for money destination or fine dining restaurant.
-        We have plans to consider centralized storage units to improve operations and costs efficiencies, building a back-end
-        support system. Our primary focus will be developing and propagating the brand and maintaining service quality. Based
-        on feedback from our customer's we are opening another branch of GingerClubDoha in Pearl Qatar. The Fine dining restaurant
-        is overlooking the Pearl Qatar. We look forward in servicing our esteemed customers with same passion and quality.</p>
+      <p *ngFor="let p of aboutContent.content">{{p}}</p>
     </div>
     <div class="col-md-12 noPadding info text-center">
       <div class="col-md-3 no-padding-left">
