--- a/src/app/home/components/home.component.html
+++ b/src/app/home/components/home.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="flexslider" id="home">
+<div class="flexslider" id="home">
   <ul class="slides">
     <li>
       <h1 class="flex-caption">Welcome to New
@@ -12,4 +12,4 @@
         <span class="brandColor">Order Online!</span> Get Your Orders At Door Step</h1>
     </li>
   </ul>
-</div> -->
+</div>
