--- a/src/app/location/components/location.component.html
+++ b/src/app/location/components/location.component.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-md-9 location" id="locationDiv">
-  <button class="hidden-xs hidden-sm btn btn-default btn-sm" type="button" id="location" data-toggle="modal" data-target=".setLocation">
+  <button class="hidden-xs hidden-sm btn btn-default btn-sm" type="button" id="location" (click) = "showModal()">
       <i class="fa fa-map-marker" aria-hidden="true"></i> Choose Your Location
       <span class="caret"></span>
   </button>
-<location-modal *ngIf="locationResponse" [locationData] = "locationResponse"></location-modal>
+<location-modal *ngIf="locationResponse" [locationData] = "locationResponse" (locationFoundEvent) = "locationModalExist()"></location-modal>
 </div>
