Mobile fix for order online and endpoint change

--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -54,3 +54,10 @@ span.back {
     color: #8BC53E;
     cursor: pointer;
 }
+
+.orderBox-mobile {
+    max-height: inherit;
+    overflow-y: visible;
+    margin-bottom: 0;
+}
+@import "responsive";
