--- a/src/app/order-online/components/order-online.component.html
+++ b/src/app/order-online/components/order-online.component.html
@@ -23,6 +23,12 @@
                                 <button id="menuItem{{item.restMenuItemId}}" type="button" class="btn-sm btn btn-primary cart text-uppercase"><i class= "fa fa-shopping-cart" aria-hidden= "true"> </i>QR {{item.price}}</button>
                                 <!-- p class="col-md-12 noPadding text-justify hidden-xs">{{description}}</p -->
                             </div>
+                            <div class="col-xs-12 hidden-sm hidden-md hidden-lg recipe rm" [ngClass] ="{veg: item.isVeg, nonVeg: !item.isVeg}" *ngFor = "let item of menuItem.restMenuItems">
+                                <span class="col-xs-9 no-padding-left">
+                                    <h5>{{item.menuItemName}}</h5>
+                                </span>
+                                <button id="menuItem{{item.restMenuItemId}}" type="button" class="btn-sm col-xs-3 btn btn-primary cart text-uppercase"><i class= "fa fa-shopping-cart" aria-hidden= "true"> </i>QR {{item.price}}</button>
+                            </div>
                         </div>
                     </div>
                 </div>
