--- a/src/app/order-online/components/order-online.component.less
+++ b/src/app/order-online/components/order-online.component.less
@@ -171,3 +171,117 @@ ul#gingerMenu {
 td.menuName {
     width: 200px;
 }
+
+@media (max-width: 768px) {
+    .menuGrid {
+        margin-bottom: 0 !important;
+        border: none;
+        padding: inherit;
+        .deliciousRecipes {
+            margin: 0;
+        }
+    }
+    .gingerRecipes {
+        padding: 0;
+    }
+    .selectMenu {
+        padding: 0 !important;
+        .gingerMenus {
+            .nav-pills {
+                padding: 0 !important;
+                margin-bottom: 10px;
+            }
+            .resp-tab-content {
+                max-height: inherit;
+                overflow-y: inherit;
+                .recipe.rm {
+                    span * {
+                        display: inline-block;
+                    }
+                    padding: 5px;
+                    height: auto;
+                    border: none;
+                    border-bottom: @border;
+                    i.fa-circle {
+                        border-width: 1px;
+                        font-size: x-small;
+                        padding: 1px 2px;
+                        position: static;
+                    }
+                }
+            }
+        }
+    }
+    .stickyCart {
+        background: #444;
+        height: 40px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 700;
+        color: #FFF;
+        h5 {
+            color: #FFF;
+            margin: 0;
+            line-height: 1.6;
+            span {
+                width: 25px;
+                height: 25px;
+                background: salmon;
+                border-radius: 50%;
+                padding: 5px;
+                position: absolute;
+                text-align: center;
+                line-height: normal;
+                font-size: small;
+                right: 0;
+                top: 0.5em;
+            }
+        }
+        button {
+            width: 100%;
+            height: 40px;
+        }
+    }
+    .basket {
+        display: none;
+        padding: 0 10px !important;
+        position: fixed;
+        bottom: 40px;
+        right: 0;
+        left: 0;
+        z-index: 701;
+        background: #FFF;
+        height: 50%;
+        overflow-y: scroll;
+        box-shadow: 0 -3px 33px 1px rgba(0, 0, 0, 0.3);
+        .menuGrid {
+            padding: 5px;
+            span.topHead {
+                border-bottom: none;
+            }
+            .pricing-detail {
+                h3, a {
+                    text-align: center;
+                    display: block;
+                }
+            }
+            button {
+                display: block;
+                margin: 7px auto;
+                width: 100%;
+            }
+            .cart-items {
+                .orderBox-mobile;
+                table {
+                    tr {
+                        td.menuName {
+                            width: 170px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
