--- a/src/app/order-online/components/order-online.component.html
+++ b/src/app/order-online/components/order-online.component.html
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-md-12 gingerMenus">
           <app-main-menu-container [mainMenuItems]="mainMenuItems"></app-main-menu-container>
-          <app-main-menu-items-container [menuResponse]="menuResponse"></app-main-menu-items-container>
+          <app-main-menu-items-container [mainMenuItems]="menuResponse"></app-main-menu-items-container>
         </div>
       </div>
     </div>
