--- a/src/app/order-online/components/cart/cart.component.html
+++ b/src/app/order-online/components/cart/cart.component.html
@@ -1,61 +1,71 @@
+<!-- Below div is for small screen display -->
+<!-- TODO Need to write true responsive design -->
 <div class="hidden-md hidden-lg stickyCart">
   <div class="col-xs-8 mobileYourCart">
-      <h5>
-          Your Cart
-          <span class="totalCount"></span>
-      </h5>
-      <small class="text-uppercase itemTotl"></small>
+    <h5>
+      Your Cart
+      <span class="totalCount"></span>
+    </h5>
+    <small class="text-uppercase itemTotl"></small>
   </div>
   <div class="col-xs-4 no-padding-right">
-      <button type="button" class="mCheckout hidden-md hidden-lg btn btn-success" value="" data-toggle="modal" data-target=".userLogin">
-          Checkout
-          <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-      </button>
+    <button type="button" class="mCheckout hidden-md hidden-lg btn btn-success" value="" data-toggle="modal" data-target=".userLogin">
+      Checkout
+      <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+    </button>
   </div>
 </div>
 
-<div class="col-md-4 gBox hidden-xs noCartinfo text-center">
+<!-- Below 2 div is for large screen display -->
+<div *ngIf="!checkOutMenuItems" class="col-md-4 gBox hidden-xs noCartinfo text-center">
   <h6>No item added in Cart</h6>
   <i class="fa fa-2x fa-smile-o" aria-hidden="true"></i>
 </div>
 
-<div class="col-md-4 basket padding-bottom hidden">
+<div *ngIf="checkOutMenuItems" class="col-md-4 basket padding-bottom">
   <div class="menuGrid">
-      <span class="col-md-12 noPadding topHead">
-          <h5>Your Orders</h5>
-          <small class="totalCount pull-right"></small>
-          <small class="pull-right">Total No. Item: </small>
-      </span>
-      <div class="col-md-12 cart-items noPadding">
-          <div class="table-responsive" style="border: 1px solid #dddddd">
-              <table class="table table-condensed table-striped" style="margin: 0">
-                  <thead>
-                      <th>Recipes</th>
-                      <th>Qty</th>
-                      <th class="text-center">Price</th>
-                      <th></th>
-                  </thead>
-                  <tbody id="checkOutTbl" class="table-striped">
-                    <tr id="mItem{{restMenuItemId}}">
-                      <td class="menuName text-capitalize">{{menuItemName}}</td>
-                      <td><input class="text-center" type="number" name="points" min="1" max="10" value="{{quantity}}"> </td>
-                      <td class="updatedPrice text-uppercase text-center">QR {{price}}</td>
-                      <td class="text-left"><a href="#"><i class="fa fa-times fa-lg delete-item" aria-hidden="true"></i></a> </td>
-                  </tr>
-                  </tbody>
-              </table>
-          </div>
+    <span class="col-md-12 noPadding topHead">
+      <h5>Your Orders</h5>
+      <small class="totalCount pull-right"></small>
+      <small class="pull-right">Total No. Item: </small>
+    </span>
+    <div class="col-md-12 cart-items noPadding">
+      <div class="table-responsive" style="border: 1px solid #dddddd">
+        <table class="table table-condensed table-striped" style="margin: 0">
+          <thead>
+            <th>Recipes</th>
+            <th>Qty</th>
+            <th class="text-center">Price</th>
+            <th></th>
+          </thead>
+          <tbody id="checkOutTbl" class="table-striped">
+
+            <tr *ngFor = "let checkOutMenuItem of checkOutMenuItems" id="mItem{{checkOutMenuItem.menuItemId}}">
+              <td class="menuName text-capitalize">{{checkOutMenuItem.menuName}}</td>
+              <td>
+                <input class="text-center" type="number" name="points" min="1" max="10" value="{{checkOutMenuItem.quantity}}"> </td>
+              <td class="updatedPrice text-uppercase text-center">QR {{checkOutMenuItem.unitPrice}}</td>
+              <td class="text-left">
+                <a href="#">
+                  <i class="fa fa-times fa-lg delete-item" aria-hidden="true"></i>
+                </a>
+              </td>
+            </tr>
+
+          </tbody>
+        </table>
       </div>
-      <div class="col-md-12 pricing-detail noPadding text-right">
-          <h5>
-              <strong>Item Total:
-                  <span class="itemTotl text-uppercase"></span>
-              </strong>
-          </h5>
-      </div>
-      <button id="checkOut" type="button" class="btn col-md-12 btn-lg btn-success hidden-xs hidden-sm">
-          Checkout
-          <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-      </button>
+    </div>
+    <div class="col-md-12 pricing-detail noPadding text-right">
+      <h5>
+        <strong>Item Total:
+          <span class="itemTotl text-uppercase"></span>
+        </strong>
+      </h5>
+    </div>
+    <button id="checkOut" type="button" class="btn col-md-12 btn-lg btn-success hidden-xs hidden-sm">
+      Checkout
+      <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+    </button>
   </div>
 </div>
